src/objects/ClusterUser__c.object
<CustomObject>
    <description>Determines which users have access to the cluster, the access type (Read Only or Read/Write), it&apos;s child clusters and the configuration below the cluster (ex.: Content, Components, Tags, etc.).</description>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <label>Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only Down</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>Read All ORG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipName>ClusterGovernance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ClusterUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cluster User</label>
    <nameField>
        <displayFormat>CU-{00000}</displayFormat>
        <label>Cluster User #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cluster Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>